getting rid of the admin panel layout's height to avoid all overflow hackery

--- a/coreapp/public/stylesheets/admin-panel.css
+++ b/coreapp/public/stylesheets/admin-panel.css
@@ -1,6 +1,5 @@
 body {
     border: 1px dashed red;
-    height: 400px;
     margin: 0;
     padding: 0;
     width: 600px;
